--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,10 @@ add_executable(${PROJECT_NAME} ${SRC_FILES})
 # runtime data
 file(COPY "${PROJECT_SOURCE_DIR}/data/lists/" DESTINATION "${CMAKE_BINARY_DIR}/data/lists/")
 
-if (UNIX)
-    target_link_libraries(${PROJECT_NAME} PRIVATE -lstdc++fs)
-endif()
+# lstdc++fs shouldn't be needed when using the CXX 17 standard.
+#if (UNIX)
+#    target_link_libraries(${PROJECT_NAME} PRIVATE -lstdc++fs)
+#endif()
 
 install(TARGETS ${PROJECT_NAME} DESTINATION "bin")
 install(DIRECTORY "${PROJECT_SOURCE_DIR}/data/lists" DESTINATION "bin/data")
