refactor to dmpower2, add ctest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,21 @@
-﻿cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.10)
+project("dmpower2" VERSION 2.0)
+message(STATUS "BEGIN CMAKE FOR: ${PROJECT_NAME} ==========" )
 
-project("DungeonMasterPower" VERSION 1.0)
-
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_subdirectory(dmpower)
+add_subdirectory(dmpower2)
+enable_testing()
+# Include CDash dashboard testing module
+include(CTest)
+# Dashboard is opened for submissions for a 24 hour period
+# starting at the specified NIGHTLY_START_TIME. Time is
+# specified in 24 hour format.
+set (CTEST_NIGHTLY_START_TIME "01:00:00 UTC")
+# CDash server to submit results (used by client)
+set (CTEST_DROP_METHOD http)
+set (CTEST_DROP_SITE "my.cdash.org")
+set (CTEST_DROP_LOCATION "/submit.php?project=dmpower2")
+set (CTEST_DROP_SITE_CDASH TRUE)
+add_subdirectory(tests)
