--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿cmake_minimum_required (VERSION 3.10)
+﻿cmake_minimum_required (VERSION 3.12)
 project("dmpower2" VERSION 2.0)
 message(STATUS "BEGIN CMAKE FOR: ${PROJECT_NAME} ==========" )
 
@@ -7,10 +7,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(dmpower2)
 
-enable_testing()
-
-# Include CDash dashboard testing module
-include(CTest)
+# ctest and cdash
+ENABLE_TESTING()
+INCLUDE(CTest)
 
 set(CTEST_PROJECT_NAME "dmpower2")
 set(CTEST_NIGHTLY_START_TIME "01:00:00 UTC")
@@ -21,4 +20,5 @@ set(CTEST_DROP_LOCATION "/submit.php?project=dmpower2")
 set(CTEST_DROP_SITE_CDASH TRUE)
 
 add_subdirectory(tests)
+
 
