--- a/dmpower2config.h.in
+++ b/dmpower2config.h.in
@@ -1,3 +1,6 @@
-// the configured options and settings for Tutorial
-#define dmpower2_VERSION_MAJOR @dmpower2_VERSION_MAJOR@
-#define dmpower2_VERSION_MINOR @dmpower2_VERSION_MINOR@
+
+
+#define ${PROJECT_NAME}_VERSION_MAJOR @dmpower2_VERSION_MAJOR@
+
+
+#define ${PROJECT_NAME}_VERSION_MINOR @dmpower2_VERSION_MINOR@
